Fix alignment of row items

--- a/app/assets/stylesheets/editor/list.css.scss
+++ b/app/assets/stylesheets/editor/list.css.scss
@@ -29,7 +29,10 @@
   border-radius: $sCard-borderRadius;
 }
 .List-row.List-row.is-disabled { opacity: 0.4 }
-.List-row:last-child > .List-rowItem { border-bottom: 1px solid transparent }
+.List-row:last-child > .List-rowItem {
+  // to have same height as the other items, w/o the visible border
+  border-bottom: 1px solid transparent
+}
 .List-rowItem {
   @include display-flex();
   @include justify-content(space-between, justify);
